--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "deepmerge": "^4.3.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
@@ -27,9 +31,10 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
