--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MtgLifeCounter",
+  "name": "mtg-life-counter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "deepmerge": "^4.3.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
